@@ -1,4 +1,7 @@
 2020-12-19
+- Implement element 160 (SystemInitTime) in option template
+
+2020-12-19
 - Add Element 160 (SystemInitTime) in flow record used by Huawei
 
 2020-12-05
